2012-08-20  Nate Chapin  <japhet@chromium.org>

        Unsafe vsprintf usage in TestNetscapePlugin
        https://bugs.webkit.org/show_bug.cgi?id=94522

        Reviewed by Adam Barth.

        * DumpRenderTree/TestNetscapePlugIn/PluginObject.cpp:
        (pluginLogWithArguments): Using vsnprintf instead of vsprintf to ensure we don't overflow
            the message buffer.
        (testDocumentOpen):
        (testWindowOpen):

2012-08-20  George Staikos  <staikos@webkit.org>

        [BlackBerry] Enable XHR Response BLOB
        https://bugs.webkit.org/show_bug.cgi?id=94525

        Reviewed by Rob Buis.

        Turn on the XHR response blob feature for the BlackBerry port.

        * Scripts/webkitperl/FeatureList.pm: Add the feature and enable it.

2012-08-20  Dirk Pranke  <dpranke@chromium.org>

        temporarily disable ImageDiff on WK2 ports for ref tests
        https://bugs.webkit.org/show_bug.cgi?id=94517

        Reviewed by Brady Eidson.

        ImageDiff appears to be unable to handle the pngs returned from
        WebKitTestRunner, so we disable checking images by default
        for ref tests on wk2 ports (unless pixel tests is explicitly enabled).

        * Scripts/webkitpy/layout_tests/controllers/single_test_runner.py:
        (SingleTestRunner._compare_output_with_reference):

2012-08-20  Dirk Pranke  <dpranke@chromium.org>

        Add missing FIXME: to previous change.
        https://bugs.webkit.org/show_bug.cgi?id=94505

        Reviewed by Ojan Vafai.

        * Scripts/webkitpy/layout_tests/port/driver.py:
        (Driver.run_test):

2012-08-20  Dirk Pranke  <dpranke@chromium.org>

        Intermittenly, many WebKit2 tests have results from the wrong test compared to the test just run, giving false failures.
        https://bugs.webkit.org/show_bug.cgi?id=94505

        Reviewed by Ojan Vafai.

        It looks like if the webprocess times out, WTR may tell NRWT
        that the test completed, but not properly reset its internal