@@ -1,3 +1,15 @@
+2012-08-20  Simon Fraser  <simon.fraser@apple.com>
+
+        Lots of "error, test and reference image have different properties" in pixel test output
+        https://bugs.webkit.org/show_bug.cgi?id=92578
+
+        Reviewed by Dirk Pranke.
+
+        Improve ImageDiff's error reporting when test result image and expected image
+        differ in their properties.
+
+        * DumpRenderTree/cg/ImageDiffCG.cpp:
+
 2012-08-20  Nate Chapin  <japhet@chromium.org>
 
         Unsafe vsprintf usage in TestNetscapePlugin
